--- a/password/passwordapp/templates/passwordapp/base.html
+++ b/password/passwordapp/templates/passwordapp/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     {% include "passwordapp/navbar.html" %}
-    <div class="container text-center m-5 align-left">
+    <div class="container text-center m-5">
         {% block content %}{% endblock  %}
     </div>
 
