--- a/password/passwordapp/templates/passwordapp/password.html
+++ b/password/passwordapp/templates/passwordapp/password.html
@@ -1,5 +1,5 @@
 {% extends "passwordapp/base.html" %}
 {% block content %}
 <h1>Your password is</h1>
-<h2 class="alert alert-success">{{password}}</h2>
+<h2 class="alert alert-info">{{password}}</h2>
 {% endblock  %}
